# fastapi-template

./: config.py  database.py  deps.py  main.py  pyproject.toml  security.py
alembic/: env.py
alembic/versions/: 780d107f7d2b_add_timestamps_to_users_table.py  79433ffb6820_create_user_table.py
app/: main.py
app/core/: config.py  deps.py  security.py
app/models/: user.py
app/routers/: auth.py  user.py
app/schemas/: __init__.py  user.py
models/: user.py
routers/: auth.py  user.py
schemas/: __init__.py  user.py
